--- a/css/main.css
+++ b/css/main.css
@@ -3,13 +3,14 @@ html, body{
 }
 
 a, a:hover, a:visited {
-	color:white;
 	text-decoration:none;
+	color:white;
 }
 
-h2 {
+h1, h2 {
 	font-family: 'Roboto', sans-serif;
 	font-weight: 400;
+	color:white;
 }
 
 
@@ -45,6 +46,18 @@ margin-right:10%;
 text-align:center;
 padding-top:20%;
 padding-bottom:20%;
+margin-left:20px;
+margin-right:20px;
+}
+
+.list-item {
+border-bottom: 1px solid #CCC;
+font-family: 'Roboto', sans-serif;
+font-weight: 400;
+text-align: center;
+font-size: 22px;
+padding-top:25px;
+padding-bottom:25px;
 margin-left:20px;
 margin-right:20px;
 }
