--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,6 @@ background-color: #9ADAFD;
 }
 
 .container {
-
 padding-left:0px;
 padding-right:0px;
 }
@@ -27,7 +26,6 @@ padding-right:0px;
 
 .container-main {
 height:100%;
-
 }
 
 .row {
@@ -61,3 +59,38 @@ padding-bottom:25px;
 margin-left:20px;
 margin-right:20px;
 }
+
+.form-control , .form-control:focus{
+border-radius: 0px;
+box-shadow: inset 0 0px 0px;
+border-top:0px;
+border-left:0px;
+border-right:0px;
+border-bottom:0px;
+line-height: 40px;
+min-height: 40px;
+color:#000;
+font-family: 'Roboto', sans-serif;
+font-weight: 400;
+font-size: 18px;
+background-color: #FFF;
+}
+
+.line-bottom , .line-bottom:focus{
+border-bottom:1px solid #CCC;
+}
+
+.whitebox {
+background-color: #FFF;
+}
+
+.btn-block {
+font-family: 'Roboto', sans-serif;
+font-weight: 700;
+font-size: 20px;
+margin-top:15px;
+border-radius: 0px;
+background-image: none;
+border:0px;
+}
+
