--- a/template/add.html
+++ b/template/add.html
@@ -17,6 +17,7 @@
 				<textarea class="form-control line-bottom whitebox" placeholder="Ajoutez un commentaire" ng-model="newReport.description"/></textarea>
 				<input class="form-control line-bottom whitebox" type="text" placeholder="Lieu 1" ng-model="newReport.location1"/>
 				<input class="form-control whitebox" type="text" placeholder="Lieu 2" ng-model="newReport.location2"/>
+				<input type="hidden" ng-model="newReport.coords"/>
 				<input class="btn btn-success btn-lg btn-block" type="submit" value="OK"/>
 			<form>
 		</div>
