--- a/template/_addPicture.html
+++ b/template/_addPicture.html
@@ -1,5 +1,9 @@
-<form ng-submit="addPicture()" role="form">
-	<input class="form-control btn btl-lg btn-default whitebox" type="file" capture="camera" accept="image/*" id="cameraInput" name="cameraInput" ng-model="newPicture.picture">
-	<input type="hidden" ng-model="newPicture.idReport"/>
-	<input class="btn btn-success btn-lg btn-block" type="submit" value="Terminer"/>
-</form>
+<div class="photo-form">
+	<div class="drop-zone">
+		<form ng-submit="addPicture()" enctype="multipart/form-data" role="form">
+			<input class="form-control btn btl-lg btn-default whitebox" type="file" capture="camera" accept="image/*" id="cameraInput" name="cameraInput" ng-model="newPicture.picture">
+			<input type="hidden" ng-model="newPicture.idReport"/>
+			<input class="btn btn-success btn-lg btn-block" type="submit" value="Termine"/>
+		</form>
+	</div>
+</div>
