--- a/template/add.html
+++ b/template/add.html
@@ -12,12 +12,12 @@
 
 			<div ng-show="newReport.pictureForm" class="photo-form" ng-controller="PictureController">
 				<form ng-submit="addPicture()" role="form2">
-					<div class="drop-zone">
+					<div class="drop-zone" ng-click="selectFile()">
 					<img class="drop-img" ng-hide="!newReport.pictureUrl" id="uppic" src=""/>
 					<img class="drop-img" ng-hide="newReport.pictureUrl" ng-if="newReport.b64pic" ng-src="{{newReport.b64pic}}"/>
 					<input type="hidden" ng-model="newPicture.idReport"/>
 						<div ng-hide="newReport.b64pic" class="file_upload">
-							<input type="file" ng-file-select="onFileSelect($files)" id="cameraInput" name="cameraInput" accept="image/*" ng-model="newPicture.picture">
+							<input type="file" ng-hide="true" ng-file-select="onFileSelect($files)" id="cameraInput" name="cameraInput" accept="image/*" ng-model="newPicture.picture">
 						</div>
 						<div ng-hide="newReport.b64pic" class="desc-photo">
 							<i class="fa fa-camera fa-5x"></i>
