--- a/css/main.css
+++ b/css/main.css
@@ -37,14 +37,17 @@ padding-right:0px;
 }
 
 .status {
-background-color: #EEE;
+text-align: center;
+background-color: #333;
 color: #999;
 font-style: italic;
 position : absolute;
-width:100%;
-left:0 ;
-top: 0;
-z-index: -1;
+left:40% ;
+top: 50%;
+z-index: 100;
+padding-left: 4px;
+padding-right: 4px;
+border-radius: 10px;
 }
 
 .huge-button {
