--- a/template/add.html
+++ b/template/add.html
@@ -1,7 +1,7 @@
 <nav class="navbar" role="navigation">
 	<div class="container">
 		<div class="navbar-header">
-			<a class="navbar-brand" href="#">back</a>
+			<a class="navbar-brand" href="#">&lt; Retour</a>
 		</div>
 	</div>
 </nav>
