--- a/template/report.html
+++ b/template/report.html
@@ -1,10 +1,7 @@
 <nav class="navbar" role="navigation">
 	<div class="container">
 		<div class="navbar-header">
-			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-					<i class="fa fa-bars"></i>
-			</button>
-			<a class="navbar-brand" href="#search">back</a>
+			<a class="navbar-brand" href="#search">&lt; Retour</a>
 		</div>
 	</div>
 </nav>
