--- a/template/search.html
+++ b/template/search.html
@@ -13,7 +13,7 @@
 				<div class="list-item">
 					<div class="item">
 						<div class="img-item">
-							<img ng-show="report.picture" class="test" src="{{report.picture}}"></img>
+							<img ng-show="report.picture" class="test" ng-src="{{report.picture}}"></img>
 							<div class="text">{{report.name}}</div>
 						</div>
 					</div>
@@ -21,6 +21,7 @@
 				</div>
 			</a>
 		</div>
-	<div ng-click="moreReports(lastid)" id="more" class="more btn btn-default btn-lg">Plus d'incidents</div>
+<!-- 	<div ng-click="moreReports(lastid)" id="more" class="more btn btn-default btn-lg">Plus d'incidents</div>
+ -->	
 	</div>
 </div>
