--- a/template/index.html
+++ b/template/index.html
@@ -1,9 +1,26 @@
-    <div class="container container-main" >
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="huge-button"><h2><a href="#search"><span class="glyphicon glyphicon-search"></span> &nbsp;Rechercher un incident</h2></a>
-        </div>
-        <div class="huge-button"><h2><a href="#add"><span class="glyphicon glyphicon-plus"></span> &nbsp;Rapporter un incident</h2></a>
-        </div>
-      </div>
-    </div> <!-- /container -->   
+<nav class="navbar shadow-z-1" role="navigation">
+	<div class="container-header">
+		<div class="navbar-header">
+			<ul class="nav navbar-nav">
+			<li><a class="navbar-brand" href="#"><i class="mdi-navigation"  style="line-height: 30px;"></i></a><li>
+			<li><div class="navbar-brand"><a href="#">BrokenStuff</a></div></li>
+	    	<li class="right-menu"><a href="#search"><i class="mdi-action-search"   ></i></a></li>
+	    	</ul>
+		</div>
+	</div>
+</nav>
+<div class="container">
+<a href="#add"><button class="btn btn-fab btn-raised  btn-bottom btn-material-red">
+<i class="mdi-content-add"></i>
+<div class="ripple-wrapper"></div>
+</button></a>
+
+<div class="jumbotron">
+  <h1>Hello, world!</h1>
+  <p>BrokenStuff est un service qui permet d'enregistrer tous les problèmes de materiel de la RATP et de la SNCF</p>
+  <p>Aidez-nous à resencer les problèmes, nous les enverrons à la bonne personne :)</p>
+  <p>Bisous.</p>
+  <p>D&K</p>
+</div>
+
+</div>
