--- a/template/search.html
+++ b/template/search.html
@@ -1,23 +1,25 @@
-<nav class="navbar" role="navigation">
-	<div class="container">
+<nav class="navbar shadow-z-1" role="navigation">
+	<div class="container-header">
 		<div class="navbar-header">
-			<a class="navbar-brand" href="#">&lt; Retour</a>
+			<a class="navbar-brand" href="#"><i class="mdi-navigation-arrow-back"  style="line-height: 30px;"></i></a>
+			<div class="navbar-brand">Search</div>
 		</div>
 	</div>
 </nav>
 <div class="container">
-		<div ng-hide="loading"></div>
-	<div class="row white">
-		<div ng-repeat ="report in reports" class="col-xs-12">
+	<div ng-hide="loading"></div>
+	<a href="#add"><button class="btn btn-fab btn-raised  btn-bottom btn-material-red">
+		<i class="mdi-content-add"></i>
+		<div class="ripple-wrapper"></div>
+	</button></a>
+	<div class="row">
+		<div ng-repeat ="report in reports" class="col-xs-12 list-item shadow-z-2">
 			<a href="#report/{{report.id}}">
-				<div class="list-item">
-					<div class="item">
+				<div class="item">
 						<div class="img-item">
 							<img ng-show="report.picture" class="test" ng-src="{{report.picture}}"></img>
 							<div class="text">{{report.name}}</div>
 						</div>
-					</div>
-
 				</div>
 			</a>
 		</div>
