--- a/template/index.html
+++ b/template/index.html
@@ -1,4 +1,4 @@
-<nav class="navbar shadow-z-1" role="navigation">
+<nav class="navbar shadow-z-3" role="navigation">
 	<div class="container-header">
 		<div class="navbar-header">
 			<ul class="nav navbar-nav">
@@ -10,10 +10,7 @@
 	</div>
 </nav>
 <div class="container">
-<a href="#add"><button class="btn btn-fab btn-raised  btn-bottom btn-material-red">
-<i class="mdi-content-add"></i>
-<div class="ripple-wrapper"></div>
-</button></a>
+<a href="#add" class="btn btn-fab btn-raised  btn-bottom btn-material-red mdi-content-add"></a>
 
 <div class="jumbotron">
   <h1>Hello, world!</h1>
