--- a/template/report.html
+++ b/template/report.html
@@ -1,17 +1,22 @@
-<nav class="navbar shadow-z-1" role="navigation">
+<nav class="navbar shadow-z-3" role="navigation">
 	<div class="container-header">
 		<div class="navbar-header">
 			<a class="navbar-brand" href="#search"><i class="mdi-navigation-arrow-back"  style="line-height: 30px;"></i></a>
 			<div class="navbar-brand">Search</div>
 		</div>
 	</div>
-	<div class="item-full">
-		<div class="img-item">
-			<img ng-show="report.picture" class="test" ng-src="{{report.picture}}"></img>
-			<div class="text-full">{{report.name}}</div>
-		</div>
-	</div>
+
 </nav>
+<nav class="navbar">
+	<div class="item-full">
+	<div class="img-item">
+		<img ng-show="report.picture" class="test" ng-src="{{report.picture}}"></img>
+		<div class="text-full">{{report.name}}</div>
+	</div>
+</div>
+</nav>
+
+
 <div class="container">
 	<div class="row">
 		<div class="col-md-12"><div class="note">Note</div>{{report.description}}</div>
