--- a/template/search.html
+++ b/template/search.html
@@ -1,4 +1,4 @@
-<nav class="navbar shadow-z-1" role="navigation">
+<nav class="navbar shadow-z-3" role="navigation">
 	<div class="container-header">
 		<div class="navbar-header">
 			<a class="navbar-brand" href="#"><i class="mdi-navigation-arrow-back"  style="line-height: 30px;"></i></a>
@@ -8,10 +8,7 @@
 </nav>
 <div class="container">
 	<div ng-hide="loading"></div>
-	<a href="#add"><button class="btn btn-fab btn-raised  btn-bottom btn-material-red">
-		<i class="mdi-content-add"></i>
-		<div class="ripple-wrapper"></div>
-	</button></a>
+	<a href="#add" class="btn btn-fab btn-raised  btn-bottom btn-material-red mdi-content-add"></a>
 	<div class="row">
 		<div ng-repeat ="report in reports" class="col-xs-12 list-item shadow-z-2">
 			<a href="#report/{{report.id}}">
