--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,7 @@ margin-right:0px;
 }
 
 .container {
-padding-top:16px;
+padding-top:8px;
 padding-left:0px;
 padding-right:0px;
 margin-left:0px;
@@ -90,6 +90,13 @@ padding-left:16px;
 padding-right:16px;
 }
 
+.row-no-padding {
+height:100%;
+margin-left:0px;
+margin-right:0px;
+padding-left:0px;
+padding-right:0px;
+}
 .status {
 text-align: center;
 background-color: #333;
@@ -127,9 +134,39 @@ margin-right:20px;
 background-color: #FFF;
 }
 
-.list-item {
+.card {
 margin-top:8px;
 margin-bottom:8px;
+}
+
+.card-body {
+	font-size:16px;
+}
+
+.card-body-info {
+	color:#999;
+}
+
+.card-body-actions {
+	padding-left:8px;
+	padding-right:8px;
+}
+
+.card hr {
+margin-top:0px;
+margin-bottom:0px;
+}
+
+.card .btn {
+	padding: 8px 10px;
+}
+
+.card a {
+	font-weight: bold;
+}
+
+.list-item {
+position: relative;
 }
 
 .item {
@@ -161,14 +198,12 @@ width: 100%;
 
 .text {
 position: absolute;
-bottom:1.2em;
-left: 10%;
+bottom:16px;
+left: 16px;
 z-index: 2;
 font-family: 'Roboto', sans-serif;
-/*font-weight: 400;*/
-font-size: 1.7em;
-/*font-size: 24px;*/
-/*text-shadow: black 1px 2px;*/
+font-size: 2em;
+line-height: 1em;
 }
 
 .text-full {
