--- a/template/add.html
+++ b/template/add.html
@@ -6,8 +6,8 @@
 		</div>
 	</div>
 </nav>
-<div class="container">
-	<div class="row">
+<div class="container-no-padding">
+	<div class="row-no-padding">
 		<div class="col-md-12">
 
 			<div ng-show="newReport.pictureForm" class="photo-form" ng-controller="PictureController">
