--- a/css/main.css
+++ b/css/main.css
@@ -1,27 +1,75 @@
 html, body{
-    height: 100%;
-	font-family: 'Roboto', sans-serif;
-	font-size: 16px;
-	font-weight: 400;
+/*    height: 100%;*/
+    	font-size: 16px;
+/*	font-family: 'Roboto', sans-serif;
+	font-weight: 400;*/
+background-color: #FFF;
 }
 
-a, a:hover, a:visited {
+/*a, a:hover, a:visited {
 	text-decoration:none;
-	color:white;
-}
+}*/
 
-h1, h2 {
+/*h1, h2 {
 	font-weight: 400;
 	color:black;
+}*/
+
+/*body {
+background-color: #FFF;
+}*/
+
+.display2 {
+font-size: 45px;
 }
 
-body {
-background-color: #FFF;
+.display1 {
+font-size: 34px;
+}
+
+.headline {
+font-size: 24px;
+}
+
+.title {
+font-size: 20px;
+font-weight: 300;
+}
+
+.subhead {
+font-size: 16px;
+}
+
+.body2 {
+font-size: 14px;
+font-weight: 300;
+
+}
+
+.body1 {
+font-size: 14px;
+}
+
+.caption {
+padding-top:6px;
+padding-bottom:6px;
+font-size: 12px;
+color:#999;
+}
+
+.button {
+font-size: 14px;
+text-transform : capitalize;
+}
+
+.normal {
+font-size: 16px;
 }
 
 .navbar {
 margin-bottom:0px;
 font-weight: 700;
+color: #FFF;
 }
 
 .navbar-nav {
@@ -58,6 +106,10 @@ margin-right:0px;
 .container-main {
 height:100%;
 background-color: #80CBC4;
+}
+
+.jumbotron{
+margin-top:8px;
 }
 
 i {
@@ -139,10 +191,6 @@ margin-top:8px;
 margin-bottom:8px;
 }
 
-.card-body {
-	font-size:16px;
-}
-
 .card-body-info {
 	color:#999;
 }
@@ -172,14 +220,14 @@ position: relative;
 .item {
 max-height:10em;
 min-height:10em;
-background-color: #80CBC4;
-overflow: hidden;
+/*background-color: #80CBC4;
+*/overflow: hidden;
 }
 
 .item-full {
 max-height:50%;
-background-color: #80CBC4;
-overflow: hidden;
+/*background-color: #80CBC4;
+*/overflow: hidden;
 }
 
 .col-xs-6 , .col-xs-12, .col-md-12{
@@ -192,31 +240,16 @@ height: 100%;
 width: 100%;
 }
 
-.test {
+.img-item img {
 width: 100%;
 }
 
 .text {
 position: absolute;
-bottom:16px;
-left: 16px;
+bottom:0.5em;
+left: 0.5em;
 z-index: 2;
-font-family: 'Roboto', sans-serif;
-font-size: 2em;
-line-height: 1em;
-}
-
-.text-full {
-position: absolute;
-bottom:0.8em;
-left: 15%;
-z-index: 2;
-font-family: 'Roboto', sans-serif;
-/*font-weight: 400;*/
-font-size: 2.6em;
-/*font-size: 24px;*/
-/*text-shadow: black 1px 2px;*/
-color:white;
+color : #FFF;
 }
 
 .form-control , .form-control:focus{
@@ -225,23 +258,28 @@ box-shadow: inset 0 0px 0px;
 border-top:0px;
 border-left:0px;
 border-right:0px;
-border-bottom:0px;
 line-height: 40px;
-min-height: 40px;
-color:#000;
-font-family: 'Roboto', sans-serif;
-font-weight: 400;
-font-size: 18px;
 background-color: #FFF;
+color: #000;
 }
 
-.line-bottom , .line-bottom:focus{
-border-bottom:1px solid #CCC;
+.formcontrol  {
+font-size: 16px;
 }
 
-.whitebox {
-background-color: #FFF;
+input.form-control, input.form-control:focus {
+min-height: 50px;
 }
+
+input.form-control, input.form-control:focus, select.form-control, select.form-control:focus , textarea.form-control, textarea.form-control:focus{
+margin-bottom:8px;
+}
+
+select.line-bottom, select.line-bottom:focus, .line-bottom , .line-bottom:focus{
+border-bottom:1px solid #EEE;
+}
+
+
 
 .right {
 position: relative;
@@ -259,7 +297,6 @@ height: 50px;
 border : 2px dashed #CCC;
 min-height: 300px;
 width:100%;
-background-color: #DDD;
 }
 
 .drop-img {
@@ -269,7 +306,7 @@ height:100%;
 
 .photo-form {
 background-color: #FFF;
-
+margin-top:16px;
 }
 
 .file_upload {
@@ -288,4 +325,59 @@ color:#999;
 
 .more {
 width: 100%
+}
+
+
+.material-lime  {
+  background-color: #cddc39;
+}
+.material-lime-50 {
+  background-color: #f9fbe7;
+}
+.material-lime-100 {
+  background-color: #f0f4c3;
+}
+.material-lime-200 {
+  background-color: #e6ee9c;
+}
+.material-lime-300 {
+  background-color: #dce775;
+}
+.material-lime-400 {
+  background-color: #d4e157;
+}
+.material-lime-500 {
+  background-color: #cddc39;
+}
+.material-lime-600 {
+  background-color: #c0ca33;
+}
+.material-lime-700 {
+  background-color: #afb42b;
+}
+.material-lime-800 {
+  background-color: #9e9d24;
+}
+.material-lime-900  {
+  background-color: #827717;
+}
+.material-lime-A100{
+  background-color: #f4ff81;
+}
+.material-lime-A200 {
+  background-color: #eeff41;
+}
+.material-lime-A400 {
+  background-color: #c6ff00;
+}
+.material-lime-A700 {
+  background-color: #aeea00;
+}
+
+.btn-material-lime:not(.btn-link):not(.btn-flat){
+	color:white;
+}
+
+.navbar-material-lime.navbar {
+color:white;
 }
