--- a/template/add.html
+++ b/template/add.html
@@ -1,18 +1,17 @@
-<nav class="navbar shadow-z-3" role="navigation">
+<nav class="navbar navbar-material-lime shadow-z-1" role="navigation">
 	<div class="container-header">
 		<div class="navbar-header">
 			<a class="navbar-brand" href="#"><i class="mdi-navigation-close"  style="line-height: 30px;"></i></a>
-			<div class="navbar-brand">Nouvel incident</div>
+			<div class="navbar-brand title">Nouvel incident</div>
 		</div>
 	</div>
 </nav>
-<div class="container-no-padding">
-	<div class="row-no-padding">
+<div class="container">
+	<div class="row">
 		<div class="col-md-12">
-
 			<div ng-show="newReport.pictureForm" class="photo-form" ng-controller="PictureController">
 				<form ng-submit="addPicture()" role="form2">
-					<div class="drop-zone" ng-click="selectFile()">
+					<div class="drop-zone material-lime-100" ng-click="selectFile()">
 					<img class="drop-img" ng-if="newReport.b64pic" ng-src="{{newReport.b64pic}}"/>
 					<input type="hidden" ng-model="newPicture.idReport"/>
 						<div ng-hide="newReport.b64pic" class="file_upload">
@@ -23,25 +22,27 @@
 						</div>
 				</div>
 				<div class="right">
-					<input ng-hide="newReport.endOfProcess" ng-disabled="!newReport.b64pic" class="btn btn-primary" type="submit" value="ENREGISTRER"/>
+					<input ng-hide="newReport.endOfProcess" ng-disabled="!newReport.b64pic" class="btn btn-material-lime btn-primary" type="submit" value="ENREGISTRER"/>
 					</form>
 				</div>
 			</div>
 
 			<form ng-locations ng-show="newReport.reportForm" ng-init="newReport.reportForm = true" ng-submit="addReport()" role="form">
-				<input ng-disabled="newReport.endOfProcess" class="form-control line-bottom whitebox" type="text" placeholder="Nom" ng-model="newReport.name"/>
-				<textarea ng-disabled="newReport.endOfProcess" class="form-control line-bottom whitebox" placeholder="Ajoutez un commentaire" ng-model="newReport.description"/></textarea>
-				<select ng-model="newReport.location1" ng-change="populateSub(newReport.location1)" ng-options="item.id as item.name for item in locations" class="form-control line-bottom whitebox" ng-disabled="newReport.endOfProcess">
-    				<option value="">Lieu 1</option>
-				</select>
-				<select ng-model="newReport.location2" ng-options="item.id as item.name for item in sublocations" class="form-control line-bottom whitebox" ng-disabled="newReport.endOfProcess">
-    				<option value="">Lieu 2</option>
-				</select>
+				<input ng-disabled="newReport.endOfProcess" class="form-control line-bottom display1" type="text" placeholder="Intitulé" ng-model="newReport.name"/>
+				<textarea ng-disabled="newReport.endOfProcess" class="form-control line-bottom normal" placeholder="Ajoutez un commentaire" ng-model="newReport.description"/></textarea>
+				<div class="caption">Ligne</div>
+				<select ng-model="newReport.location1" ng-change="populateSub(newReport.location1)" ng-options="item.id as item.name for item in locations" class="form-control line-bottom normal" ng-disabled="newReport.endOfProcess">
+<!--     				<option value="">Lieu 1</option>
+ -->				</select>
+				<div class="caption">Gare</div>
+				<select ng-model="newReport.location2" ng-options="item.id as item.name for item in sublocations" class="form-control line-bottom normal" ng-disabled="newReport.endOfProcess">
+<!--     				<option value="">Lieu 2</option>
+ -->				</select>
 				<input ng-disabled="newReport.endOfProcess" type="hidden" ng-model="newReport.coords"/>
 				<input ng-disabled="newReport.endOfProcess" type="hidden" ng-model="newReport.datetime"/>
 				<input ng-disabled="newReport.endOfProcess" type="hidden" ng-model="newReport.id"/>
 				<div class="right">
-					<input ng-hide="newReport.endOfProcess" class="btn btn-primary" type="submit" value="SUIVANT"/>
+					<input ng-hide="newReport.endOfProcess" class="btn btn-material-lime btn-primary" type="submit" value="SUIVANT"/>
 				</div>
 			<form>
 		</div>
