--- a/template/index.html
+++ b/template/index.html
@@ -1,16 +1,16 @@
-<nav class="navbar shadow-z-3" role="navigation">
+<nav class="navbar navbar-material-lime shadow-z-1" role="navigation">
 	<div class="container-header">
 		<div class="navbar-header">
 			<ul class="nav navbar-nav">
 			<li><a class="navbar-brand" href="#"><i class="mdi-navigation"  style="line-height: 30px;"></i></a><li>
-			<li><div class="navbar-brand"><a href="#">BrokenStuff</a></div></li>
+			<li><div class="navbar-brand title">BrokenStuff</div></li>
 	    	<li class="right-menu"><a href="#search"><i class="mdi-action-search"   ></i></a></li>
 	    	</ul>
 		</div>
 	</div>
 </nav>
 <div class="container">
-<a href="#add" class="btn btn-fab btn-raised  btn-bottom btn-material-red mdi-content-add"></a>
+<a href="#add" class="btn btn-fab btn-raised btn-bottom btn-material-red mdi-content-add"></a>
 
 <div class="jumbotron">
   <h1>Hello, world!</h1>
