--- a/template/report.html
+++ b/template/report.html
@@ -1,17 +1,17 @@
-<nav class="navbar shadow-z-3" role="navigation">
+<nav class="navbar navbar-material-lime" role="navigation">
 	<div class="container-header">
 		<div class="navbar-header">
 			<a class="navbar-brand" href="#search"><i class="mdi-navigation-arrow-back"  style="line-height: 30px;"></i></a>
-			<div class="navbar-brand">Search</div>
+			<div class="navbar-brand title">Incident</div>
 		</div>
 	</div>
 
 </nav>
-<nav class="navbar">
-	<div class="item-full">
+<nav class="navbar navbar-material-lime">
+	<div class="item-full material-lime-300">
 	<div class="img-item">
 		<img ng-show="report.picture" class="test" ng-src="{{report.picture}}"></img>
-		<div class="text-full">{{report.name}}</div>
+		<div class="text display2">{{report.name}}</div>
 	</div>
 </div>
 </nav>
@@ -19,13 +19,13 @@
 
 <div class="container">
 	<div class="row">
-		<div class="col-md-12"><div class="note">Note</div>{{report.description}}</div>
+		<div class="col-md-12"><div class="note">Description</div>{{report.description}}</div>
 	</div>
 	<hr>
 	<div class="row">
 		<div class="col-md-12">
-			<div class="note">Locations</div>
-			<div ng-repeat="location in report.location">{{location}}</div>
+			<div class="note">Localisation</div>
+			{{report.location.parent}} - {{report.location.name}}
 		</div>
 	</div>
 </div>
