--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,7 @@
 html, body{
 /*    height: 100%;*/
     	font-size: 16px;
-/*	font-family: 'Roboto', sans-serif;
-	font-weight: 400;*/
+	font-family: 'Roboto', sans-serif;
 background-color: #FFF;
 }
 
@@ -21,14 +20,17 @@ background-color: #FFF;
 
 .display2 {
 font-size: 45px;
+font-weight: 400;
 }
 
 .display1 {
 font-size: 34px;
+font-weight: 400;
 }
 
 .headline {
 font-size: 24px;
+font-weight: 400;
 }
 
 .title {
@@ -38,6 +40,7 @@ font-weight: 300;
 
 .subhead {
 font-size: 16px;
+font-weight: 400;
 }
 
 .body2 {
@@ -48,9 +51,11 @@ font-weight: 300;
 
 .body1 {
 font-size: 14px;
+font-weight: 400;
 }
 
 .caption {
+font-weight: 400;
 padding-top:6px;
 padding-bottom:6px;
 font-size: 12px;
@@ -250,6 +255,86 @@ bottom:0.5em;
 left: 0.5em;
 z-index: 2;
 color : #FFF;
+}
+
+
+
+.field {
+  line-height: 12px;
+  position: relative;
+  padding-top: 16px;
+  padding-bottom: 8px;
+  padding-right: 0px;
+  padding-left: 0px;
+}
+
+.field-label {
+  margin: 0;
+  position: relative;
+  line-height: 16px;
+  color: #E7E7E7;
+  font-weight: 400;
+  display: block;
+  font-size: 16px;
+  transform: translateY(24px);
+  transition: transform 0.3s ;
+  transition: font-size:0.3s;
+}
+
+.field-input {
+  position: relative;
+  background: transparent;
+  /*height: 32px;*/
+  line-height: 16px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-right: 0px;
+  padding-left: 0px;
+  border: none;
+  -webkit-appearance:none;
+  display: block;
+  width: 100%;
+  font-size: 16px;
+  outline: none;
+}
+
+.field-textarea {
+  height: 64px;
+}
+
+option {
+  height: 32px;
+  line-height: 16px;
+  
+}
+
+.field::after , .field::before{
+content:'';
+height: 2px;
+background-color: #E7E7E7;
+width: 100%;
+position: absolute;
+bottom: 6px;  
+left: 0;
+}
+
+.field::after {
+background-color: #AFB42B;
+transform: scaleX(0);
+transition: transform 0.3s;
+}
+
+.is-focused .field-label {
+  color:#AFB42B;
+}
+
+.has-label .field-label {
+  transform: translateY(0);
+}
+
+
+.field.is-focused::after{
+transform: scaleX(1);
 }
 
 .form-control , .form-control:focus{
