--- a/css/main.css
+++ b/css/main.css
@@ -127,8 +127,15 @@ font-size: 1.3em;
 	padding-bottom:3px;
 }
 
+.picto {
+position: absolute;
+bottom:75px;
+left:0.25em;
+font-size:15em;
+}
+
 .btn {
-font-weight: 700;
+/*font-weight: 700;*/
 }
 
 .btn-bottom {
@@ -137,6 +144,12 @@ bottom: 16px;
 right: 16px;
 z-index: 100;
 font-weight:400;
+}
+
+.btn-middle {
+position: absolute; 
+bottom:-28px;
+right: 16px;
 }
 
 .row {
@@ -231,6 +244,7 @@ min-height:10em;
 
 .item-full {
 max-height:50%;
+min-height:12em;
 /*background-color: #80CBC4;
 */overflow: hidden;
 }
@@ -272,7 +286,7 @@ color : #FFF;
   margin: 0;
   position: relative;
   line-height: 16px;
-  color: #E7E7E7;
+  color: #DDD;
   font-weight: 400;
   display: block;
   font-size: 16px;
@@ -292,6 +306,7 @@ color : #FFF;
   padding-left: 0px;
   border: none;
   -webkit-appearance:none;
+  -moz-appearance:none;
   display: block;
   width: 100%;
   font-size: 16px;
@@ -311,7 +326,7 @@ option {
 .field::after , .field::before{
 content:'';
 height: 2px;
-background-color: #E7E7E7;
+background-color: #DDD;
 width: 100%;
 position: absolute;
 bottom: 6px;  
@@ -382,6 +397,7 @@ height: 50px;
 border : 2px dashed #CCC;
 min-height: 300px;
 width:100%;
+background-color: #E7E7E7;
 }
 
 .drop-img {
