--- a/template/index.html
+++ b/template/index.html
@@ -10,8 +10,6 @@
 	</div>
 </nav>
 <div class="container">
-<a href="#add" class="btn btn-fab btn-raised btn-bottom btn-material-red mdi-content-add"></a>
-
 <div class="jumbotron">
   <h1>Hello, world!</h1>
   <p>BrokenStuff est un service qui permet d'enregistrer tous les problèmes de materiel de la RATP et de la SNCF</p>
@@ -20,4 +18,7 @@
   <p>D&K</p>
 </div>
 
+</div>
+<div class="bottom">
+<a href="#add" class="btn btn-fab btn-raised btn-bottom btn-material-red mdi-content-add"></a>
 </div>
