--- a/template/search.html
+++ b/template/search.html
@@ -8,7 +8,9 @@
 </nav>
 <div class="container">
 	<div ng-hide="loading"></div>
-	<a href="#add" class="btn btn-fab btn-raised  btn-bottom btn-material-red mdi-content-add"></a>
+	<div class="bottom">
+		<a href="#add" class="btn btn-fab btn-raised  btn-bottom btn-material-red mdi-content-add"></a>
+	</div>
 	<div class="row">
 	<div ng-hide="reports">
 		<p>Cette fonction necessite l'activation de la géolocalisation. </p>
