--- a/template/report.html
+++ b/template/report.html
@@ -9,7 +9,7 @@
 <nav class="navbar navbar-material-lime">
 	<div class="item-full material-lime-300">
 	<div class="img-item">
-		<img ng-show="report.picture" class="test" ng-src="{{report.picture}}"></img>
+		<img ng-show="report.picture" class="test" ng-src="{{report.picture.thumbnail}}"></img>
 		<div class="text display2">{{report.name}}</div>
 	</div>
 </div>
