--- a/template/search.html
+++ b/template/search.html
@@ -6,22 +6,23 @@
 		</div>
 	</div>
 </nav>
-<div class="container">
+<div class="container container-span">
 	<div ng-hide="loading"></div>
 	<div class="bottom">
 		<a href="#add" class="btn btn-fab btn-raised  btn-bottom btn-material-red mdi-content-add"></a>
 	</div>
-	<div class="row">
-	<div ng-hide="reports">
+<!-- 	<div class="row"> -->
+	<div ng-hide="coords">
 		<p>Cette fonction necessite l'activation de la géolocalisation. </p>
 	</div>
-		<div ng-repeat ="report in reports" class="col-xs-12 card shadow-z-2">
+		<div ng-show="go" ng-repeat ="report in reports" class="row">
+		<div class="col-xs-12 card shadow-z-2">
 			<div class="list-item">
 			<a href="#report/{{report.id}}">
 				<div class="item material-lime-300">
 					<div class="text display1">{{report.name}}</div>
 						<div class="img-item">
-							<img ng-show="report.picture" ng-src="{{report.picture}}"></img>
+							<img ng-show="report.picture" ng-src="{{report.picture.thumbnail}}"></img>
 							
 						</div>
 				</div>
@@ -39,6 +40,7 @@
 			<div class="card-body-actions" ng-controller="VoteController"><span href="" class="button btn btn-material-lime btn-flat btn-primary" id="action_{{report.id}}" ng-click="vote(report.id)">CONFIRM</span>
 			</div>
 		</div>
+<!-- 		</div> -->
 <!-- 	<div ng-click="moreReports(lastid)" id="more" class="more btn btn-default btn-lg">Plus d'incidents</div>
  -->	
 	</div>
