--- a/css/main.css
+++ b/css/main.css
@@ -1,76 +1,71 @@
 html, body{
-/*    height: 100%;*/
-    	font-size: 16px;
+  font-size: 16px;
 	font-family: 'Roboto', sans-serif;
-background-color: #FFF;
+  background-color: #FFF;
 }
 
-/*a, a:hover, a:visited {
-	text-decoration:none;
-}*/
-
-/*h1, h2 {
-	font-weight: 400;
-	color:black;
-}*/
-
-/*body {
-background-color: #FFF;
-}*/
-
+/***************************************/
+/* Formatage de l'affichage des textes */
 .display2 {
-font-size: 45px;
-font-weight: 400;
+  font-size: 45px;
+  font-weight: 400;
 }
 
 .display1 {
-font-size: 34px;
-font-weight: 400;
+  font-size: 34px;
+  font-weight: 400;
 }
 
 .headline {
-font-size: 24px;
-font-weight: 400;
+  font-size: 24px;
+  font-weight: 400;
 }
 
 .title {
-font-size: 20px;
-font-weight: 300;
+  font-size: 20px;
+  font-weight: 300;
 }
 
 .subhead {
-font-size: 16px;
-font-weight: 400;
+  font-size: 16px;
+  font-weight: 400;
 }
 
 .body2 {
-font-size: 14px;
-font-weight: 300;
-
+  font-size: 14px;
+  font-weight: 300;
 }
 
 .body1 {
-font-size: 14px;
-font-weight: 400;
+  font-size: 14px;
+  font-weight: 400;
 }
 
 .caption {
-font-weight: 400;
-padding-top:6px;
-padding-bottom:6px;
-font-size: 12px;
-color:#999;
+  font-weight: 400;
+  padding-top:6px;
+  padding-bottom:6px;
+  font-size: 12px;
+  color:#999;
 }
 
 .button {
-font-size: 14px;
-text-transform : capitalize;
+  font-size: 14px;
+  text-transform : capitalize;
+}
+
+.note {
+  font-size: 16px;
+  color:#999;
+  padding-bottom:3px;
 }
 
 .normal {
-font-size: 16px;
+  font-size: 16px;
 }
 
+/***************************************/
+/* Barre de navigation */
 .navbar {
 margin-bottom:0px;
 font-weight: 700;
@@ -92,7 +87,7 @@ margin-left:0px;
 margin-right:0px;
 }
 
-.container-header , .container-no-padding{
+.container-header{
 padding-top:0px;
 padding-left:0px;
 padding-right:0px;
@@ -100,28 +95,56 @@ margin-left:0px;
 margin-right:0px;
 }
 
+.right-nav {
+position: relative;
+float: right;
+padding-right: 16px;
+height: 50px;
+}
+
+/***************************************/
+/* conteneurs principaux */
 .container {
-padding-top:8px;
+padding-top:0px;
 padding-left:0px;
 padding-right:0px;
 margin-left:0px;
 margin-right:0px;
 }
 
-.container-main {
-height:100%;
-background-color: #80CBC4;
+.container-span {
+padding-top:8px; 
 }
 
-.jumbotron{
-margin-top:8px;
+.row {
+height:100%;
+margin-left:0px;
+margin-right:0px;
+padding-left:16px;
+padding-right:16px;
 }
+
+.col-xs-6 , .col-xs-12, .col-md-12, .col-sm-6{
+padding-left:0px;
+padding-right:0px;
+}
+
+.bottom {
+position : fixed;
+bottom: 16px;
+right: 16px;
+z-index: 100;  
+}
+
+/***************************************/
+/* Snackbar */
 
 .snackbar-container {
 position: fixed;
 left: 0;
 bottom: 0;
 width: 100%;
+z-index: 9999;
 }
 
 .snackbar.snackbar-opened {
@@ -133,49 +156,25 @@ margin-bottom: 0px;
 border-radius: 0px;
 }
 
-.snackbar2 {
-font-size: 14px;
-font-family: 'Roboto', sans-serif;
-text-align: top;
-
-
-
-padding-left: 24px;
-padding-top: 16px;
-padding-bottom: 12px;
-padding-right: 24px;
-background-color: #323232 ;
+.waiting {
+z-index: 99;
+background-color: #FFF;
+opacity: 0.5;
+width: 100%;
+height: 100%;
+position:fixed;
+transition: opacity .2s ;
 }
 
+/***************************************/
+/* Icones */
 i {
 font-size: 1.3em;
 }
 
-.note {
-	font-size: 16px;
-	color:#999;
-	padding-bottom:3px;
-}
-
-.picto {
-position: absolute;
-bottom:75px;
-left:0.25em;
-font-size:15em;
-}
-
+/***************************************/
+/* Boutons */
 .btn {
-/*font-weight: 700;*/
-}
-
-.bottom {
-position : fixed;
-bottom: 16px;
-right: 16px;
-z-index: 100;  
-}
-
-.btn-bottom {
 font-weight:400;
 }
 
@@ -185,127 +184,38 @@ bottom:-28px;
 right: 16px;
 }
 
-.row {
-height:100%;
-margin-left:0px;
-margin-right:0px;
-padding-left:16px;
-padding-right:16px;
-}
-
-.row-no-padding {
-height:100%;
-margin-left:0px;
-margin-right:0px;
-padding-left:0px;
-padding-right:0px;
-}
-.status {
-text-align: center;
-background-color: #333;
-color: #999;
-font-style: italic;
-position : fixed;
-left:45% ;
-top: 35%;
-z-index: 100;
-
-}
-
-.waiting {
-z-index: 99;
-background-color: #FFF;
-opacity: 0.5;
-width: 100%;
-height: 100%;
-position:fixed;
-}
-
-.huge-button {
-color: white;
-font-weight:bold;
-margin-left:10%;
-margin-right:10%;
-text-align:center;
-padding-top:20%;
-padding-bottom:20%;
-margin-left:20px;
-margin-right:20px;
-}
-
-.white {
-background-color: #FFF;
-}
-
+/***************************************/
+/* Card */
 .card {
-margin-top:8px;
-margin-bottom:8px;
+  margin-top:8px;
+  margin-bottom:8px;
 }
 
 .card-body-info {
-	color:#999;
+  color:#999;
 }
 
 .card-body-actions {
-	padding-left:8px;
-	padding-right:8px;
+  padding-left:8px;
+  padding-right:8px;
 }
 
 .card hr {
-margin-top:0px;
-margin-bottom:0px;
+  margin-top:0px;
+  margin-bottom:0px;
 }
 
 .card .btn {
-	padding: 8px 10px;
+  padding: 8px 10px;
 }
 
 .card a {
-	font-weight: bold;
-}
-
-.list-item {
-position: relative;
-}
-
-.item {
-max-height:10em;
-min-height:10em;
-/*background-color: #80CBC4;
-*/overflow: hidden;
-}
-
-.item-full {
-max-height:50%;
-min-height:12em;
-/*background-color: #80CBC4;
-*/overflow: hidden;
-}
-
-.col-xs-6 , .col-xs-12, .col-md-12{
-padding-left:0px;
-padding-right:0px;
-}
-
-.img-item{
-height: 100%;
-width: 100%;
-}
-
-.img-item img {
-width: 100%;
-}
-
-.text {
-position: absolute;
-bottom:0.5em;
-left: 0.5em;
-z-index: 2;
-color : #FFF;
+  font-weight: bold;
 }
 
 
-
+/***************************************/
+/* Formulaire */
 .field {
   line-height: 12px;
   position: relative;
@@ -338,6 +248,7 @@ color : #FFF;
   padding-right: 0px;
   padding-left: 0px;
   border: none;
+  border: 0; 
   -webkit-appearance:none;
   -moz-appearance:none;
   display: block;
@@ -353,7 +264,6 @@ color : #FFF;
 option {
   height: 32px;
   line-height: 16px;
-  
 }
 
 .field::after , .field::before{
@@ -394,6 +304,7 @@ border-right:0px;
 line-height: 40px;
 background-color: #FFF;
 color: #000;
+outline-color:white;
 }
 
 .formcontrol  {
@@ -412,20 +323,23 @@ select.line-bottom, select.line-bottom:focus, .line-bottom , .line-bottom:focus{
 border-bottom:1px solid #EEE;
 }
 
+/***************************************/
+/* Formulaire d'ajout report */
 
+.picto {  /* TODO : a revoir , positionnement aleatoire et nomage approximatif */
+position: absolute;
+bottom:75px;
+left:0.25em;
+font-size:15em;
+}
 
 .right {
 position: relative;
 float: right;
 }
 
-.right-menu {
-position: relative;
-float: right;
-padding-right: 16px;
-height: 50px;
-}
-
+/***************************************/
+/* Picture picker */
 .drop-zone {
 border : 2px dashed #CCC;
 min-height: 300px;
@@ -448,20 +362,47 @@ position: relative;
 overflow: hidden;
 }
 
-.desc-photo{
-margin-top:110px;
-margin-left:42%;
+/***************************************/
+/* Résultats  */
+.list-item {
+position: relative;
 }
 
-.fa-camera {
-color:#999;
+.item {
+max-height:10em;
+min-height:10em;
+overflow: hidden;
+}
+
+.item-full {
+max-height:50%;
+min-height:12em;
+overflow: hidden;
+}
+
+.img-item{
+height: 100%;
+width: 100%;
+}
+
+.img-item img {
+width: 100%;
+}
+
+.text {
+position: absolute;
+bottom:0.5em;
+left: 0.5em;
+z-index: 2;
+color : #FFF;
 }
 
 .more {
 width: 100%
 }
 
-
+/***************************************/
+/* Material Design add-on */
 .material-lime  {
   background-color: #cddc39;
 }
