--- a/template/index.html
+++ b/template/index.html
@@ -4,12 +4,14 @@
 			<ul class="nav navbar-nav">
 			<li><a class="navbar-brand" href="#"><i class="mdi-navigation"  style="line-height: 30px;"></i></a><li>
 			<li><div class="navbar-brand title">BrokenStuff</div></li>
-	    	<li class="right-menu"><a href="#search"><i class="mdi-action-search"   ></i></a></li>
+	    	<li class="right-nav"><a href="#search"><i class="mdi-action-search"></i></a></li>
 	    	</ul>
 		</div>
 	</div>
 </nav>
 <div class="container">
+
+<div class="col-md-12">
 <div class="jumbotron">
   <h1>Hello, world!</h1>
   <p>BrokenStuff est un service qui permet d'enregistrer tous les problèmes de materiel de la RATP et de la SNCF</p>
@@ -21,4 +23,6 @@
 </div>
 <div class="bottom">
 <a href="#add" class="btn btn-fab btn-raised btn-bottom btn-material-red mdi-content-add"></a>
+</div>
+
 </div>
